--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class = "full-page">
     <div id="bigImage" class="container-fluid"style="background-image: url('images/bagels.jpg')">
         <div id="logo">
-            <a id = "brand" class="navbar-brand" href="#"><img src="images/OIG4_1.jpg" alt="Bob's Bagel Logo"></a>
+            <a  class="navbar-brand" href="#"><img id = "brand" src="images/OIG4_1.jpg" alt="Bob's Bagel Logo"></a>
         </div>
             
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -27,7 +27,7 @@
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                         <a class="nav-link" href="#">Bagel Menu</a>
